--- a/pages/boutique.html
+++ b/pages/boutique.html
@@ -44,7 +44,7 @@
         <nav>
             <ul>
                 <li><a href="../index.html" class="accueil">Accueil</a></li>
-                <li><a href="#">La Boutique</a></li>
+                <li><a href="#" class="laboutique">La Boutique</a></li>
                 <li><a href="#">Contactez-nous</a></li>
             </ul>
         </nav>
@@ -75,15 +75,17 @@
                     <li><a href="">SF et Fantasy</a></li>
                 </ul>
             </nav>
+            <div class="fond">
             <h2>BD et Manga</h2>
+            </div>
             <section class="hScroll">
                 <div class="xScroll">
                 <div class="vignette">
-                    <img src="../images/op1.jpg">
+                    <a href="#" class="imlink"><img src="../images/op1.jpg"></a>
                     <h3>One Piece T.01</h3>
                     <P class="petite-police">Eiichiro Oda</P>
                     <p class="petite-police">Glénat</p>
-                    <p>6.90€</p>
+                    <p class="price">6.90€</p>
                     <div class="dispo">
                         <div class="circle"></div>
                         <p>disponible</p>
@@ -95,11 +97,11 @@
                 </a>
                 </div>
                 <div class="vignette">
-                    <img src="../images/op1.jpg">
+                    <a href="#" class="imlink"><img src="../images/op1.jpg"></a>
                     <h3>One Piece T.01</h3>
                     <P class="petite-police">Eiichiro Oda</P>
                     <p class="petite-police">Glénat</p>
-                    <p>6.90€</p>
+                    <p class="price">6.90€</p>
                     <div class="dispo">
                         <div class="circle"></div>
                         <p>disponible</p>
@@ -111,11 +113,11 @@
                     </a>
                 </div>
                 <div class="vignette">
-                    <img src="../images/op1.jpg">
+                    <a href="#" class="imlink"><img src="../images/op1.jpg"></a>
                     <h3>One Piece T.01</h3>
                     <P class="petite-police">Eiichiro Oda</P>
                     <p class="petite-police">Glénat</p>
-                    <p>6.90€</p>
+                    <p class="price">6.90€</p>
                     <div class="dispo">
                         <div class="circle"></div>
                         <p>disponible</p>
@@ -128,15 +130,17 @@
                 </div>
                 </div>
             </section>
+            <div class="fond">
             <h2>Jeunesse</h2>
+            </div>
             <section class="hScroll">
                 <div class="xScroll">
                 <div class="vignette">
-                    <img src="../images/op1.jpg">
+                    <a href="#" class="imlink"><img src="../images/op1.jpg"></a>
                     <h3>One Piece T.01</h3>
                     <P class="petite-police">Eiichiro Oda</P>
                     <p class="petite-police">Glénat</p>
-                    <p>6.90€</p>
+                    <p class="price">6.90€</p>
                     <div class="dispo">
                         <div class="circle"></div>
                         <p>disponible</p>
@@ -148,11 +152,11 @@
                 </a>
                 </div>
                 <div class="vignette">
-                    <img src="../images/op1.jpg">
+                    <a href="#" class="imlink"><img src="../images/op1.jpg"></a>
                     <h3>One Piece T.01</h3>
                     <P class="petite-police">Eiichiro Oda</P>
                     <p class="petite-police">Glénat</p>
-                    <p>6.90€</p>
+                    <p class="price">6.90€</p>
                     <div class="dispo">
                         <div class="circle"></div>
                         <p>disponible</p>
@@ -164,11 +168,11 @@
                     </a>
                 </div>
                 <div class="vignette">
-                    <img src="../images/op1.jpg">
+                    <a href="#" class="imlink"><img src="../images/op1.jpg"></a>
                     <h3>One Piece T.01</h3>
                     <P class="petite-police">Eiichiro Oda</P>
                     <p class="petite-police">Glénat</p>
-                    <p>6.90€</p>
+                    <p class="price">6.90€</p>
                     <div class="dispo">
                         <div class="circle"></div>
                         <p>disponible</p>
@@ -181,15 +185,17 @@
                 </div>
                 </div>
             </section>
+            <div class="fond">
             <h2>Policier et Thriller</h2>
+            </div>
             <section class="hScroll">
                 <div class="xScroll">
                 <div class="vignette">
-                    <img src="../images/op1.jpg">
+                    <a href="#" class="imlink"><img src="../images/op1.jpg"></a>
                     <h3>One Piece T.01</h3>
                     <P class="petite-police">Eiichiro Oda</P>
                     <p class="petite-police">Glénat</p>
-                    <p>6.90€</p>
+                    <p class="price">6.90€</p>
                     <div class="dispo">
                         <div class="circle"></div>
                         <p>disponible</p>
@@ -201,11 +207,11 @@
                 </a>
                 </div>
                 <div class="vignette">
-                    <img src="../images/op1.jpg">
+                    <a href="#" class="imlink"><img src="../images/op1.jpg"></a>
                     <h3>One Piece T.01</h3>
                     <P class="petite-police">Eiichiro Oda</P>
                     <p class="petite-police">Glénat</p>
-                    <p>6.90€</p>
+                    <p class="price">6.90€</p>
                     <div class="dispo">
                         <div class="circle"></div>
                         <p>disponible</p>
@@ -217,11 +223,11 @@
                     </a>
                 </div>
                 <div class="vignette">
-                    <img src="../images/op1.jpg">
+                    <a href="#" class="imlink"><img src="../images/op1.jpg"></a>
                     <h3>One Piece T.01</h3>
                     <P class="petite-police">Eiichiro Oda</P>
                     <p class="petite-police">Glénat</p>
-                    <p>6.90€</p>
+                    <p class="price">6.90€</p>
                     <div class="dispo">
                         <div class="circle"></div>
                         <p>disponible</p>
@@ -234,15 +240,17 @@
                 </div>
                 </div>
             </section>
+            <div class="fond">
             <h2>Biographie</h2>
+            </div>
             <section class="hScroll">
                 <div class="xScroll">
                 <div class="vignette">
-                    <img src="../images/op1.jpg">
+                    <a href="#" class="imlink"><img src="../images/op1.jpg"></a>
                     <h3>One Piece T.01</h3>
                     <P class="petite-police">Eiichiro Oda</P>
                     <p class="petite-police">Glénat</p>
-                    <p>6.90€</p>
+                    <p class="price">6.90€</p>
                     <div class="dispo">
                         <div class="circle"></div>
                         <p>disponible</p>
@@ -254,11 +262,11 @@
                 </a>
                 </div>
                 <div class="vignette">
-                    <img src="../images/op1.jpg">
+                    <a href="#" class="imlink"><img src="../images/op1.jpg"></a>
                     <h3>One Piece T.01</h3>
                     <P class="petite-police">Eiichiro Oda</P>
                     <p class="petite-police">Glénat</p>
-                    <p>6.90€</p>
+                    <p class="price">6.90€</p>
                     <div class="dispo">
                         <div class="circle"></div>
                         <p>disponible</p>
@@ -270,11 +278,11 @@
                     </a>
                 </div>
                 <div class="vignette">
-                    <img src="../images/op1.jpg">
+                    <a href="#" class="imlink"><img src="../images/op1.jpg"></a>
                     <h3>One Piece T.01</h3>
                     <P class="petite-police">Eiichiro Oda</P>
                     <p class="petite-police">Glénat</p>
-                    <p>6.90€</p>
+                    <p class="price">6.90€</p>
                     <div class="dispo">
                         <div class="circle"></div>
                         <p>disponible</p>
@@ -287,15 +295,17 @@
                 </div>
                 </div>
             </section>
+            <div class="fond">
             <h2>Littérature et Fiction</h2>
+            </div>
             <section class="hScroll">
                 <div class="xScroll">
                 <div class="vignette">
-                    <img src="../images/op1.jpg">
+                    <a href="#" class="imlink"><img src="../images/op1.jpg"></a>
                     <h3>One Piece T.01</h3>
                     <P class="petite-police">Eiichiro Oda</P>
                     <p class="petite-police">Glénat</p>
-                    <p>6.90€</p>
+                    <p class="price">6.90€</p>
                     <div class="dispo">
                         <div class="circle"></div>
                         <p>disponible</p>
@@ -307,11 +317,11 @@
                 </a>
                 </div>
                 <div class="vignette">
-                    <img src="../images/op1.jpg">
+                    <a href="#" class="imlink"><img src="../images/op1.jpg"></a>
                     <h3>One Piece T.01</h3>
                     <P class="petite-police">Eiichiro Oda</P>
                     <p class="petite-police">Glénat</p>
-                    <p>6.90€</p>
+                    <p class="price">6.90€</p>
                     <div class="dispo">
                         <div class="circle"></div>
                         <p>disponible</p>
@@ -323,11 +333,11 @@
                     </a>
                 </div>
                 <div class="vignette">
-                    <img src="../images/op1.jpg">
+                    <a href="#" class="imlink"><img src="../images/op1.jpg"></a>
                     <h3>One Piece T.01</h3>
                     <P class="petite-police">Eiichiro Oda</P>
                     <p class="petite-police">Glénat</p>
-                    <p>6.90€</p>
+                    <p class="price">6.90€</p>
                     <div class="dispo">
                         <div class="circle"></div>
                         <p>disponible</p>
@@ -340,15 +350,17 @@
                 </div>
                 </div>
             </section>
+            <div class="fond">
             <h2>SF et Fantasy</h2>
+            </div>
             <section class="hScroll">
                 <div class="xScroll">
                 <div class="vignette">
-                    <img src="../images/op1.jpg">
+                    <a href="#" class="imlink"><img src="../images/op1.jpg"></a>
                     <h3>One Piece T.01</h3>
                     <P class="petite-police">Eiichiro Oda</P>
                     <p class="petite-police">Glénat</p>
-                    <p>6.90€</p>
+                    <p class="price">6.90€</p>
                     <div class="dispo">
                         <div class="circle"></div>
                         <p>disponible</p>
@@ -360,11 +372,11 @@
                 </a>
                 </div>
                 <div class="vignette">
-                    <img src="../images/op1.jpg">
+                    <a href="#" class="imlink"><img src="../images/op1.jpg"></a>
                     <h3>One Piece T.01</h3>
                     <P class="petite-police">Eiichiro Oda</P>
                     <p class="petite-police">Glénat</p>
-                    <p>6.90€</p>
+                    <p class="price">6.90€</p>
                     <div class="dispo">
                         <div class="circle"></div>
                         <p>disponible</p>
@@ -376,11 +388,11 @@
                     </a>
                 </div>
                 <div class="vignette">
-                    <img src="../images/op1.jpg">
+                    <a href="#" class="imlink"><img src="../images/op1.jpg"></a>
                     <h3>One Piece T.01</h3>
                     <P class="petite-police">Eiichiro Oda</P>
                     <p class="petite-police">Glénat</p>
-                    <p>6.90€</p>
+                    <p class="price">6.90€</p>
                     <div class="dispo">
                         <div class="circle"></div>
                         <p>disponible</p>
