--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="haut">
             <ul>
                 <li><a href="#">S'inscrire</a></li>
-                <li><a href="#">Se connecter</a></li>
+                <li><a href="pages/connexion.html">Se connecter</a></li>
             </ul>
         </div>     
         <i class="fas fa-bars burger"></i>
@@ -31,7 +31,7 @@
             <input type="text" id="search" value="Rechercher..." onfocus="this.value=''">
         </form>
         <ul>
-            <li><a href="#">Se connecter</a></li>
+            <li><a href="pages/connexion.html">Se connecter</a></li>
             <li><a href="#">S'inscrire</a></li>
             <li><a href="#">Panier (0)</a></li>
             <li><a href="pages/boutique.html">La Boutique</a></li>
