--- a/pages/boutique.html
+++ b/pages/boutique.html
@@ -15,7 +15,7 @@
         <div class="haut">
             <ul>
                 <li><a href="#">S'inscrire</a></li>
-                <li><a href="#">Se connecter</a></li>
+                <li><a href="../pages/connexion.html">Se connecter</a></li>
             </ul>
         </div>     
         <i class="fas fa-bars burger"></i>
@@ -30,7 +30,7 @@
             <input type="text" id="search" value="Rechercher..." onfocus="this.value=''">
         </form>
         <ul>
-            <li><a href="#">Se connecter</a></li>
+            <li><a href="../pages/connexion.html">Se connecter</a></li>
             <li><a href="#">S'inscrire</a></li>
             <li><a href="#">Panier (0)</a></li>
             <li><a href="#">La Boutique</a></li>
