--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <nav>
             <ul>
                 <li><a href="#" class="accueil">Accueil</a></li>
-                <li><a href="pages/boutique.html">La Boutique</a></li>
+                <li class="laboutique"><a href="pages/boutique.html">La Boutique</a></li>
                 <li><a href="#">Contactez-nous</a></li>
             </ul>
         </nav>
