--- a/pages/boutique.html
+++ b/pages/boutique.html
@@ -44,7 +44,7 @@
         <nav>
             <ul>
                 <li><a href="../index.html" class="accueil">Accueil</a></li>
-                <li><a href="#" class="laboutique">La Boutique</a></li>
+                <li class="laboutique"><a href="#" class="store">La Boutique</a></li>
                 <li><a href="#">Contactez-nous</a></li>
             </ul>
         </nav>
