--- a/pages/connexion.html
+++ b/pages/connexion.html
@@ -33,7 +33,7 @@
             <li><a href="#">Se connecter</a></li>
             <li><a href="#">S'inscrire</a></li>
             <li><a href="#">Panier (0)</a></li>
-            <li><a href="#">La Boutique</a></li>
+            <li><a href="boutique.html">La Boutique</a></li>
             <li><a href="#">Contactez nous</a></li>
             <li><a href="#">À Propos</a></li>
             <li><a href="#">Mentions légales</a></li>
@@ -44,7 +44,7 @@
         <nav>
             <ul>
                 <li><a href="../index.html" class="accueil">Accueil</a></li>
-                <li><a href="#" class="laboutique">La Boutique</a></li>
+                <li class="laboutique"><a href="boutique.html">La Boutique</a></li>
                 <li><a href="#">Contactez-nous</a></li>
             </ul>
         </nav>
@@ -56,13 +56,17 @@
             <input type="text" id="Identifiant">
             <h2 class="mdp">Mot de passe</h2>
             <input type="text" id="Identifiant">
-            <div class="btn-co">
-                <p>Connexion</p>
-            </div>
+            <a href="#" class="button">
+                <div class="btn-co">
+                    <p>Connexion</p>
+                </div>
+            </a>
             <a href="#">Mot de passe oublié ?</a>
-            <div class="btn-creer">
-                <p>Créer un compte</p>
-            </div>
+            <a href="#" class="button">
+                <div class="btn-creer">
+                    <p>Créer un compte</p>
+                </div>
+            </a>
         </form>
     </main>
     <footer>
